--- a/app/src/main/res/layout/med_item.xml
+++ b/app/src/main/res/layout/med_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:layout_marginTop="14dp"
     android:layout_marginStart="28dp"
     android:layout_marginEnd="28dp"
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="Location Name"
+            android:text="Med Name"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
@@ -36,6 +36,37 @@
             android:text="description"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addMed_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:backgroundTint="#4CAF50"
+                android:text="Add" />
+
+            <Button
+                android:id="@+id/moreInfo_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:backgroundTint="#2196F3"
+                android:text="More Info" />
+
+            <Button
+                android:id="@+id/deleteMed_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:backgroundTint="@color/alert"
+                android:text="Delete" />
+        </LinearLayout>
 
     </LinearLayout>
 
