--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -1,46 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/add_button"
-    android:layout_width="wrap_content"
+<androidx.cardview.widget.CardView
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_margin="16dp"
+app:cardBackgroundColor="@color/cardview_light_background"
+app:cardCornerRadius="10dp"
+app:cardElevation="10dp">
+
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/name_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
         android:layout_margin="10dp"
         android:text="sample"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/description_textView"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:maxLines="5"
-        android:text="sample"
-        android:textColor="@color/black"
-        android:textSize="10sp" />
-
     <ImageButton
         android:id="@+id/add_imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_500"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:backgroundTint="@color/blue"
         app:srcCompat="@android:drawable/ic_input_add"
         android:clickable="true"
         android:focusable="true"
+        android:elevation="8dp"
         app:tint="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
 
-<!--<Button-->
-<!--android:id="@+id/delete_button"-->
-<!--android:layout_width="wrap_content"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:layout_margin="5dp"-->
-<!--android:text="Delete"/>-->
+</androidx.cardview.widget.CardView>
