--- a/app/src/main/res/layout/fragment_insights.xml
+++ b/app/src/main/res/layout/fragment_insights.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/alert"
+    android:background="@color/white"
     tools:context=".view.fragments.InsightsFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -12,4 +12,4 @@
         android:layout_height="match_parent"
         android:text="INSIGHTS" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
